# caric_baseline

./: CMakeLists.txt  README.md  demo_paths.launch  package.xml
include/: Astar.h  baseline_planner.h  caric_demo.h  general_task_init.h  general_task_initial.h  initial_task.h
launch/: demo_paths.launch
src/: baseline_planner.cpp  caric_demo.cpp  general_task_initial.cpp  initial_task.cpp
srv/: CreatePPComTopic.srv
xxh_package/: CMakeLists.txt  package.xml
xxh_package/include/: baseline_planner.h  joy_position.h  utility.h  xxh_agent.h  xxh_initial_task.h  xxh_package.h  xxh_planner.h
xxh_package/src/: joy.cpp  joy_position.cpp  path.cpp  xxh_agent.cpp  xxh_initial_task.cpp  xxh_package copy.cpp  xxh_package.cpp
